# stm32f4_remote_controller

./: .clang-format  .gitignore  CmakeLists.txt
cmake/: compiler_flags.cmake
pcb/: stm32f4_remote_controller.kicad_pcb  stm32f4_remote_controller.kicad_prl  stm32f4_remote_controller.kicad_pro  stm32f4_remote_controller.kicad_sch
pcb/spice_simulation/dc-dc_step-up/SLVMBI5A/: TPS61021A_TRANS.DSN  TPS61021A_TRANS.OLB  TPS61021A_TRANS.OPJ  TPS61021A_TRANS.asy  dc-dc_step_up.asc
src/: CmakeLists.txt  main.c
src/cmake/: gcc-arm-none-eabi.cmake
src/code/display/: battery_bitmap.h  display.c  display.h  display_state_machine.c  display_state_machine.h  speedometer_bitmap.h
src/code/display/bitmaps/: battery_bitmap.h  display_battery_bitmap.h  display_speedometer_bitmap.h  speedometer_bitmap.h
src/code/display/state_machine/: display_state_machine.c  display_state_machine.h  display_state_machine_func.c  display_state_machine_func.h  display_state_machine_types.h
src/code/hm_10/: hm_10.c  hm_10.h  hm_10_init_commands.h
src/code/joystick_controller/: joystick_controller.c  joystick_controller.h
src/hw/adc/: adc.c  adc.h
src/hw/button/: button.c  button.h
src/hw/core_init/: core_init.c
src/hw/gpio_f4/: gpio_f4.c  gpio_f4.h
src/hw/i2c_master/: i2c_master.c  i2c_master.h
src/hw/usart/: usart.c  usart.h
src/initialization/: initialization.c  initialization.h
src/utils/: platform_specific.h  priority.h
src/utils/string_utils/: string_utils.c  string_utils.h
test/unit_test/template/: CMakeLists.txt  test.cpp
(+6 files in other folders)
